# iceberg

benchmark-queries/: README.md  pyproject.toml
benchmark-queries/src/: benchmark_queries.py
scripts/: README.md  bigquery-iceberg.sh
